# project-cpe

.github/workflows/: build-ota.yml
backend/: Cargo.toml
backend/src/: config.rs  handlers.rs  main.rs  models.rs  task_notification_channels.md  webhook.rs
frontend/src/api/: index.ts  types.ts
frontend/src/pages/: Configuration.tsx
